--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <p>Frontend Developer!</p>
                     <p>
                         As a fresher frontend developer, focus on mastering HTML, CSS, and JavaScript. Build a strong foundation in responsive design and user interface principles. Stay updated on industry trends, learn popular frameworks like React or Vue.js, and showcase your projects on a portfolio. Actively seek feedback and continually enhance your skills.</p>
-                        <br><div class="btn btn-buttom bg-info "><a href="Roopesh-kumar-Resume.pdf" download="">Download Resume</a></div> 
+                        <br><div class="btn btn-buttom bg-info btn1 "><a href="Roopesh-kumar-Resume.pdf" download="">Download Resume</a></div> 
                         <!-- <a href="Roopesh-kumar-Resume.pdf" download="">Download Resume</a> -->
                         
                 </div>
